Fixes action bar placement to avoid overlap

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -29,7 +29,7 @@ body {
 
 #actions-bar {
     position: absolute;
-    top: 75px;
+    top: 25px;
     left: 50%;
     transform: translate(-50%);
     width: 300px;
